CVS - Eric Kidd <eric.kidd@pobox.com> - Ongoing

  * Fixed all recent, reproducible bugs in CVS. These were generally
    Windows build bugs.

0.9.8 - Eric Kidd <eric.kidd@pobox.com> - 19 February 2001

  * J. Alan Eldridge, Rosimildo daSIlva: Build fixes.
  * Send 'encoding="UTF-8"' in XML prologue.

0.9.7 - Eric Kidd <eric.kidd@pobox.com> - 14 February 2001

  * SECURITY: Configurable nesting limits (see advisory 1) to prevent
    denial-of-service attacks and stack overflow.
  * Win32 build fixes from Alex Olugbile.
  * Function name fix from Luke Howard.

0.9.6w - Eric Kidd <eric.kidd@pobox.com> - 02 February 2001

  * Merged Win32 VC/C++ changes from Alex and Ian.
  * Merged Win32 Cygwin changes from Rosimildo.

0.9.6 - Eric Kidd <eric.kidd@pobox.com> - 30 January 2001

  * Fixed lots of gcc warnings.
  * Added a new 'xmlrpc_server_info' class, which allows you to
    set options on a per-server basis.
  * Added support for HTTP Basic authentication.
  * Added internal implementation of system.multicall, lots of brutal test
    cases, and stubs for other system.* commands.
  * Added APIs for accessing CGI and Abyss method registries.
  * Implemented system.listMethods, system.methodHelp, system.methodSignature.
  * Fixed stupid bug in parsing of "(ss*)"-style array descriptions
    where there were no extra elements.
  * Added highly experimental hacked copy of mod_gzip into the
    tools/turbocharger directory. This version supports gzip *and* deflate!
  * Added xml-rpc-api2txt, since XML-RPC doesn't have any IDL language.
  * Merged in Ilya Goldberg's libwww/SSL setup code.

0.9.5 - Eric Kidd <eric.kidd@pobox.com> - 20 January 2001

  * Bug fix: Make sure CGI-based servers send correct content-length.

0.9.4 - Eric Kidd <eric.kidd@pobox.com> - 18 January 2001

  * Support for CGI-based servers.

0.9.3 - Eric Kidd <eric.kidd@pobox.com> - 14 January 2001

  * Added support for libwww 5.2.8, even when linked against expat.